@@ -16,8 +16,11 @@ import org.springframework.security.oauth2.core.OAuth2TokenValidator;
 import org.springframework.security.oauth2.jwt.*;
 import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Slf4j
 @Configuration
@@ -34,9 +37,9 @@ public class SharedSecurityConfig {
     OAuth2TokenValidator<Jwt> withAzp = new AuthorizedPartyValidator(keycloakProperties.getClientId());
 
     decoder.setJwtValidator(new DelegatingOAuth2TokenValidator<>(
-      withIssuer,
-      withAudience,
-      withAzp));
+        withIssuer,
+        withAudience,
+        withAzp));
     return decoder;
   }
 
@@ -44,23 +47,39 @@ public class SharedSecurityConfig {
   JwtAuthenticationConverter jwtAuthenticationConverter() {
     var authenticationConverter = new JwtAuthenticationConverter();
     authenticationConverter.setJwtGrantedAuthoritiesConverter(jwt -> {
+      Set<String> allRoles = new HashSet<>();
+
+      // 1. Extract Realm Roles
       Map<String, Object> realmAccess = jwt.getClaim("realm_access");
       log.info("realmAccess: {}", realmAccess);
-      if (realmAccess == null || realmAccess.isEmpty()) {
-        throw new ForbiddenException();
+      if (realmAccess != null && realmAccess.get("roles") instanceof List<?> roles) {
+        roles.forEach(role -> allRoles.add(role.toString()));
       }
 
-      @SuppressWarnings("unchecked")
-      List<String> roles = (List<String>) realmAccess.get("roles");
-      log.info("roles: {}", roles);
-      if (roles == null || roles.isEmpty()) {
-        throw new ForbiddenException();
+      // @SuppressWarnings("unchecked")
+      // List<String> roles = (List<String>) realmAccess.get("roles");
+      // log.info("roles: {}", roles);
+      // if (roles == null || roles.isEmpty()) {
+      // throw new ForbiddenException();
+      // }
+
+      // return roles.stream()
+      // 2. Extract Client Roles (Resource Access)
+      Map<String, Object> resourceAccess = jwt.getClaim("resource_access");
+      if (resourceAccess != null) {
+        resourceAccess.values().forEach(resource -> {
+          if (resource instanceof Map<?, ?> map && map.get("roles") instanceof List<?> roles) {
+            roles.forEach(role -> allRoles.add(role.toString()));
+          }
+        });
       }
 
-      return roles.stream()
-        .map(SimpleGrantedAuthority::new)
-        .map(GrantedAuthority.class::cast)
-        .toList();
+      log.info("Extracted authorities for user {}: {}", jwt.getSubject(), allRoles);
+
+      return allRoles.stream()
+          .map(SimpleGrantedAuthority::new)
+          .map(GrantedAuthority.class::cast)
+          .collect(Collectors.toList());
     });
     return authenticationConverter;
   }
